add configuration jwt controller countrys

--- a/apiDemo/appsettings.Development.json
+++ b/apiDemo/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "security": {
     "allowedHosts": [ "http://localhost:8080" ],
-    "Authority": "https://localhost:5001"
+    "AuthorityHost": "https://localhost:5001"
   },
   "Logging": {
     "LogLevel": {
