--- a/security/odin/appsettings.json
+++ b/security/odin/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=SkyrangerDB;MultipleActiveResultSets=true;User ID=sa;Password=maruntes"
+    "DefaultConnection": "Server=127.0.0.1;Database=demoCountrysDB;MultipleActiveResultSets=true;User ID=sa;Password=maruntes"
   },
   "Logging": {
     "LogLevel": {
